--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coluna Sem dor</title>
+    <title>Navbar</title>
+    <link rel="stylesheet" href="./nav.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1> Coluna sem dor </h1>
+    <nav>
+        <div class="logo">Coluna sem dor</div>
+        <div class="links">
+            <ul class="nav-itens">
+               <li><a href="home.html">Home</a></li>
+               <li><a href="serviços.html">Serviços</a></li>
+               <li><a href="fotos.html">Fotos</a></li>
+               <li><a href="contato.html">Contato</a></li>
+               <li><a href="#">Contato</a></li>
+            </ul>
+        </div>
+        <div class="btn">
+            <button href="#" class="agende">Agende sua consulta</button>
+        </div>
+    </nav>
 
-    <h2> Coluna com dor </h2>
-</body>
+    <div>
+       <img src="" alt="">
+    </div>
+</body>,
 </html>
