colocando a logo na navbar

--- a/Coluna-Sem-Dor/index.html
+++ b/Coluna-Sem-Dor/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="scr/images/logo.png" alt="">
+        <img src="scr/images/Logo coluna sem dor.png" alt="">
         <nav>
             <a href="">Home</a>
             <a href="">Serviços</a>
