--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                <li><a href="serviços.html">Serviços</a></li>
                <li><a href="fotos.html">Fotos</a></li>
                <li><a href="contato.html">Contato</a></li>
-               <li><a href="#">Contato</a></li>
+               <li><a href="#">Contats</a></li>
             </ul>
         </div>
         <div class="btn">
