--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coluna Sem Dor</title>
     <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
+    <!-- <link rel="stylesheet" href="./css/reset.css"> -->
+    <!-- <link rel="stylesheet" href="./css/nav.css"> -->
+    <!-- <link rel="stylesheet" href="./css/style.css"> -->
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="container">
         <img src="./images/logo.png">
         <nav>
             <a href="">Home</a>
@@ -30,7 +30,9 @@
             <a href="">AGENDE SUA CONSULTA</a>
         </button>
     </header>
-
+    <main>
+        
+    </main>
 </body>
 
 </html>
