--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
     <main>
         
     </main>
+
+    <footer>
+        <span>
+            <p>&copy; COLUNA SEM DOR, 2025, Todos os direitos reservados</p>
+        </span>
+    </footer>
 </body>
 
 </html>
