--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/style.css">
+
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,6 +32,16 @@
         </button>
     </header>
     <main>
+
+        <aside>
+            <img src="./images/bg-main-carrosseul-1.JPG" alt="">
+            <p></p>
+            <h1>Coluna Sem dor</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</p>
+            <button>
+                <a href="">Agende conosco</a>
+            </button>
+        </aside>
 
     </main>
 
