--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
         </button>
     </header>
     <main>
-
+        
         <aside>
             <img src="./images/bg-main-carrosseul-1.JPG" alt="">
             <p></p>
             <h1>Coluna Sem dor</h1>
+            <h2>Fisioterapia</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</p>
             <button>
                 <a href="">Agende conosco</a>
