feat: prototype html

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/style.css">
-
+    <link rel="stylesheet" href="./css/main.css">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap"
+        rel="stylesheet">
 
 </head>
 
@@ -32,20 +33,47 @@
         </button>
     </header>
     <main>
-        
-        <aside>
-            <img src="./images/bg-main-carrosseul-1.JPG" alt="">
-            <p></p>
-            <h1>Coluna Sem dor</h1>
-            <h2>Fisioterapia</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</p>
+        <section class="hero">
+            <aside class="textos-main">
+                <p>Nome da doutora</p>
+                <p>Perto de X lugar</p>
+                <p>Endereço</p>
+            </aside>
             <button>
-                <a href="">Agende conosco</a>
+                <a href="">Agende uma avaliação</a>
             </button>
-        </aside>
-
+        </section>
+        <section class="nossos-servicos">
+            <aside class="servicos">
+                <h2>Nossos serviços</h2>
+                <p>Serviço 1</p>
+                <p>Serviço 2</p>
+                <p>Serviço 3</p>
+                <p>Serviço 4</p>
+            </aside>
+            <img src="" alt="">
+        </section>
+        <section>
+            <img src="" alt="">
+            <aside>
+                <h2>Sobre a clinica</h2>
+                <p>Texto ---- Texto</p>
+            </aside>
+        </section>
+        <section>
+            <aside>
+                <div class="contato">
+                    <h2>Contato</h2>
+                    <p>Tel. 9xxxx-xxxx</p>
+                    <p>E-mail. xxx@xxx.xxx</p>
+                    <button>
+                        <a href="">AGENDE AGORA</a>
+                    </button>
+                </div>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.744781603318!2d-46.70441042466716!3d-23.64930937873948!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1sen!2sbr!4v1745731334721!5m2!1sen!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </aside>
+        </section>
     </main>
-
     <footer>
         <span>
             <p>&copy; COLUNA SEM DOR, 2025, Todos os direitos reservados</p>
