fix: nossos-servicos section

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
     </aside>
 </main>
     <section class="nossos-servicos">
-        <aside>
-            <div class="aside-text-ns">
+        <aside class="aside-text-ns">
+            <div class="div-text-ns">
                 <h2>Nossos Serviços</h2>
                 <p>*Serviço</p>
                 <p>*Serviço</p>
@@ -51,12 +51,12 @@
                 <p>*Serviço</p>
             </div>
         </aside>
-        <aside>
-            <div class="aside-img-ns">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+        <aside class="aside-img-ns">
+            <div class="div-img-ns">
+                <img src="./images/retangulo cinza.png" alt="">
+                <img src="./images/retangulo cinza.png" alt="">
+                <img src="./images/retangulo cinza.png" alt="">
+                <img src="./images/retangulo cinza.png" alt="">
             </div>
         </aside>
     </section>
