feat: section sobre add

--- a/index.html
+++ b/index.html
@@ -60,4 +60,14 @@
             </div>
         </aside>
     </section>
+    <section class="sobre">
+        <div class="sobre-clinica">
+            <h2>Sobre a cliníca</h2>
+        </div>
+        <div class="img-sobre">
+            <aside>
+                <p>Texto Texto Texto Texto</p>
+            </aside>
+        </div>
+    </section>
 </html>
