fix: section sobre

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/nav.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/sobre.css">
     <link rel="stylesheet" href="./css/nossos-servicos.css">
     <!-- FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -41,33 +42,34 @@
         </div>
     </aside>
 </main>
-    <section class="nossos-servicos">
-        <aside class="aside-text-ns">
-            <div class="div-text-ns">
-                <h2>Nossos Serviços</h2>
-                <p>*Serviço</p>
-                <p>*Serviço</p>
-                <p>*Serviço</p>
-                <p>*Serviço</p>
-            </div>
-        </aside>
-        <aside class="aside-img-ns">
-            <div class="div-img-ns">
-                <img src="./images/retangulo cinza.png" alt="">
-                <img src="./images/retangulo cinza.png" alt="">
-                <img src="./images/retangulo cinza.png" alt="">
-                <img src="./images/retangulo cinza.png" alt="">
-            </div>
-        </aside>
-    </section>
-    <section class="sobre">
-        <div class="sobre-clinica">
-            <h2>Sobre a cliníca</h2>
+<section class="nossos-servicos">
+    <aside class="aside-text-ns">
+        <div class="div-text-ns">
+            <h2>Nossos Serviços</h2>
+            <p>*Serviço</p>
+            <p>*Serviço</p>
+            <p>*Serviço</p>
+            <p>*Serviço</p>
         </div>
-        <div class="img-sobre">
-            <aside>
-                <p>Texto Texto Texto Texto</p>
-            </aside>
+    </aside>
+    <aside class="aside-img-ns">
+        <div class="div-img-ns">
+            <img src="./images/retangulo cinza.png" alt="">
+            <img src="./images/retangulo cinza.png" alt="">
+            <img src="./images/retangulo cinza.png" alt="">
+            <img src="./images/retangulo cinza.png" alt="">
         </div>
-    </section>
+    </aside>
+</section>
+<section class="sobre">
+    <div class="sobre-clinica">
+        <h2>Sobre a cliníca</h2>
+    </div>
+    <div class="img-sobre">
+        <aside>
+            <p>Texto Texto Texto Texto</p>
+        </aside>
+    </div>
+</section>
+
 </html>
