--- a/index.html
+++ b/index.html
@@ -1,55 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coluna Sem Dor</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/nav.css">
-    <link rel="stylesheet" href="./css/style.css">
-
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
-
+    <title>Coluna sem dor</title>
 </head>
-
 <body>
-    <header class="container">
-        <img src="./images/logo.png">
+    <header>
         <nav>
-            <a href="">Home</a>
-            <a href="">Serviços</a>
-            <a href="">Contato</a>
-            <a href="">Sobre a clinica</a>
+            <div>
+                <a href="#"><img src="./images/logo.png" alt="Coluna sem dor" srcset=""></a>
+            </div>
+            <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
         </nav>
-        <button class="agende-header">
-            <a href="">AGENDE SUA CONSULTA</a>
-        </button>
+
     </header>
+
     <main>
-
-        <aside>
-            <img src="./images/bg-main-carrosseul-1.JPG" alt="">
-            <p></p>
-            <h1>Coluna Sem dor</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis.</p>
-            <button>
-                <a href="">Agende conosco</a>
-            </button>
-        </aside>
-
+        
     </main>
 
     <footer>
-        <span>
-            <p>&copy; COLUNA SEM DOR, 2025, Todos os direitos reservados</p>
-        </span>
-    </footer>
-</body>
 
+    </footer>
+    
+</body>
 </html>
