refactor: refatorado html estruturando em sequencia

--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coluna sem dor</title>
+    <!-- CSS -->
+
+    <!-- FONTS -->
+
+    <!-- ICONS -->
+    <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -11,21 +17,67 @@
             <div>
                 <a href="#"><img src="./images/logo.png" alt="Coluna sem dor" srcset=""></a>
             </div>
+            <div>
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="#">Home</li>
+                <li><a href="#">Serviços </li>
+                <li><a href="#">Sobre a clinica</li>
+                <li><a href="#">Contato</li>
             </ul>
+        </div>
+            <a href="">Agende agora</a>
         </nav>
 
     </header>
 
     <main>
+        <section id="banner">  
+            <div class="banner-inner">
+                <div class="container">
+                    <!-- imagem como background dessa section-->
+                     <img src="./images/bg-main-1.JPG" alt="" srcset="">
+                    <div>
+                      <h1>Coluna Sem dor</h1>
+                      <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
+                      <p><a href="#">Agende sua consulta</a></p>
+                    </div>
+                  </div>
+
+            </section>
+
+        </div>
+
+        <section id="services">
+            <div >
+                <h1>Nossos Serviços</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse in purus id urna posuere lobortis quis sed mi. </p>
+
+                <ul>
+                    <li>Quiropraxia</li>
+                    <li>Ventosas</li>
+                    <li>Ultrassom</li>
+                    <li>Pilates</li>
+                    <li>Fisioterapia Esportiva</li>
+                    <li>Ortopédica</li>
+                    <li>Ozonioterapia</li>
+                </ul>
+            </div>
+            <div>
+                <img src="./images/1.jpg" alt="" >
+                <img src="./images/2.jpg" alt="" >
+                <img src="./images/3.jpg" alt="" >
+            </div>
+        </section>
+
+        <section id="about-us">
+
+        </section>
+
         
     </main>
 
     <footer>
+        <span>&copy; Coluna sem dor, 2025 Todos os direitos reservados</span>
 
     </footer>
     
