--- a/index.html
+++ b/index.html
@@ -19,24 +19,25 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav role="navigation" aria-label="Navegação principal">
             <div>
-                <a href="#"><img src="./src/assets/logo.png" alt="Coluna sem dor"></a>
+              <a href="#"><img src="./src/assets/logo.png" alt="Logotipo da clínica Coluna sem dor"></a>
             </div>
             <div>
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Sobre a clínica</a></li>
+                <li><a href="#">Contato</a></li>
+              </ul>
+            </div>
             <ul>
-                <li><a href="#">Home</li>
-                <li><a href="#">Serviços </li>
-                <li><a href="#">Sobre a clinica</li>
-                <li><a href="#">Contato</li>
+              <li><a href="https://www.instagram.com/colunasemdoroficial/"><i class="fa-brands fa-square-instagram"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-square-whatsapp"></i></a></li>
             </ul>
-        </div>
-            <ul>
-                <li><a href="https://www.instagram.com/colunasemdoroficial/"><i class="fa-brands fa-square-instagram"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-tiktok"></i></a></li>
-                <li><a href=""><i class="fa-brands fa-square-whatsapp"></i></a></li>
-            </ul>
-        </nav>
+          </nav>
+          
 
     </header>
 
@@ -45,7 +46,7 @@
             <div class="banner-inner">
                 <div class="container">
                     <!-- imagem como background dessa section-->
-                     <img src="./images/bg-main-1.JPG" alt="" srcset="">
+                     <img src="./images/bg-main-1.JPG" alt="">
                     <div>
                       <h1>Coluna Sem dor</h1>
                       <p class="opacity-75">Some representative placeholder content for the first slide of the carousel.</p>
@@ -73,9 +74,9 @@
                 </ul>
             </div>
             <div>
-                <img src="./images/1.jpg" alt="" >
-                <img src="./images/2.jpg" alt="" >
-                <img src="./images/3.jpg" alt="" >
+                <img src="./src/assets/serv-1.jpeg" alt="pilates" >
+                <img src="./src/assets/serv-2.jpeg" alt="exercicio pilates" >
+                <img src="./src/assets/serv-3.jpeg" alt="equipamentos" >
             </div>
         </section>
 
@@ -88,11 +89,11 @@
 
             <div id="nossaestrutura">
                 <article>
-                    <h2> Estrutura</h2>
+                    <h2> Fotos </h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam placerat risus id urna sollicitudin venenatis.</p>
                 </article>
                 <div>
-                     <!-- galeria de fotos -->
+                     <!-- galeria de fotos ainda nao tenho o codigo -->
                 </div>
                
             </div>
