--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
 
+    <!-- FONTS -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
 
