Add a pasta Especialidades

--- a/index.html
+++ b/index.html
@@ -1,17 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<<<<<<< HEAD
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coluna Sem Dor</title>
-    <!-- CSS -->
-    <link rel="stylesheet" href="./css/style.css">
-    <!-- FONTS -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&display=swap" rel="stylesheet">
-=======
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coluna Sem Dor</title>
@@ -21,16 +10,13 @@
     <link rel="stylesheet" href="./src/styles/header.css" />
     <link rel="stylesheet" href="./src/styles/main.css" />
     <link rel="stylesheet" href="./src/styles/footer.css" />
+    <link rel="stylesheet" href="./src/styles/especialidades.css">
 
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
->>>>>>> feature-Denis
 
 </head>
 <body>
-<<<<<<< HEAD
-  
-=======
 
   <!-- HEADER -->
   <header>
@@ -90,7 +76,7 @@
     <a href="#" class="cta">Descubra Seu Tratamento!</a>
   </section>
 
-  <!-- DRA ALESSANDRA -->
+  <!-- DRA ALESSANDRA - Arthur -->
   <section class="especialidades">
     <h2>Dra. Alessandra</h2>
     <h3>Especialidades</h3>
@@ -106,10 +92,10 @@
       <li>Pilates clássico e Pilates Avançado</li>
       <li>Pós-graduação em Dermatofuncional e Cosmetologia</li>
     </ul>
-    <img src="./src/assets/dra-alessandra.jpg" alt="Foto da Dra. Alessandra" />
+    <img src="./src/assets/Dra Alessandra.png" alt="Foto da Dra. Alessandra" />
   </section>
 
-  <!-- SOBRE NÓS -->
+  <!-- SOBRE NÓS - Arthur -->
   <section class="sobre">
     <h2>Sobre nós</h2>
     <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar do desafio inicial da pandemia, conseguimos crescer e melhorar nossas instalações, incorporando novas técnicas e tecnologias para melhorar os resultados.</p>
@@ -118,7 +104,7 @@
     <img src="./src/assets/clinica-fachada.jpg" alt="Foto da fachada da clínica" />
   </section>
 
-  <!-- NOSSA ESTRUTURA -->
+  <!-- NOSSA ESTRUTURA - Arthur -->
   <section class="nossa-estrutura">
     <h2>Nossa Estrutura</h2>
     <p>Lorem ipsum dolor sit amet consectetur. Turpis amet donec velit aliquet nibh imperdiet cursus arcu.</p>
@@ -180,6 +166,5 @@
     </div>
   </footer>
 
->>>>>>> feature-Denis
 </body>
 </html>
