--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
 
   <!-- DRA ALESSANDRA - Arthur -->
   <section class="especialidades">
-    <h2>Dra. Alessandra</h2>
+    <img src="./src/assets/Dra Alessandra.png" alt="Foto da Dra. Alessandra" />
+    <span>
+    <h1>Dra. Alessandra</h1>
     <h3>Especialidades</h3>
     <ul>
       <li>Quiropraxia clínica</li>
@@ -92,7 +94,7 @@
       <li>Pilates clássico e Pilates Avançado</li>
       <li>Pós-graduação em Dermatofuncional e Cosmetologia</li>
     </ul>
-    <img src="./src/assets/Dra Alessandra.png" alt="Foto da Dra. Alessandra" />
+</span>
   </section>
 
   <!-- SOBRE NÓS - Arthur -->
