--- a/index.html
+++ b/index.html
@@ -1,27 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Coluna Sem Dor</title>
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="./src/styles/reset.css" />
-    <link rel="stylesheet" href="./src/styles/header.css" />
-    <link rel="stylesheet" href="./src/styles/main.css" />
-    <link rel="stylesheet" href="./src/styles/footer.css" />
+  <!-- CSS -->
+  <link rel="stylesheet" href="./src/styles/reset.css" />
+  <link rel="stylesheet" href="./src/styles/header.css" />
+  <link rel="stylesheet" href="./src/styles/main.css" />
+  <link rel="stylesheet" href="./src/styles/footer.css" />
+  <!-- <link rel="stylesheet" href="./src/styles/nav.css" /> -->
 
-    <!-- ICONS -->
-    <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
+  <!-- ICONS -->
+  <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
 
 </head>
+
 <body>
 
   <!-- HEADER -->
   <header>
     <div class="container">
       <img src="./src/assets/logo.png" alt="Logo Coluna Sem Dor" class="logo" />
-  
       <nav>
         <ul class="menu">
           <li><a href="#">HOME</a></li>
@@ -29,130 +31,141 @@
           <li><a href="#">QUEM SOMOS</a></li>
           <li><a href="#">CONTATO</a></li>
         </ul>
-
       </nav>
-
-      
-      <div class="social-icons">
-        <ul>
-            <li><a href="https://www.instagram.com/colunasemdoroficial/"><i class="fa-brands fa-square-instagram"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
-            <li><a href="#"><i class="fa-brands fa-square-whatsapp"></i></a></li>
-          </ul>
+      <div class="header-social-icons">
+        <ul class="social-icons">
+          <li class="fa-brands-fa-square-instagram">
+            <a href="https://www.instagram.com/colunasemdoroficial/"></a>
+          </li>
+          <li class="fa-brands-fa-tiktok">
+            <a href="#"></a>
+          </li>
+          <li class="fa-brands-square-whatsapp">
+            <a href="#"></a>
+          </li>
+        </ul>
       </div>
-  
-
     </div>
   </header>
-  
-<main>
-  <!-- HERO / BANNER -->
-  <section class="hero">
-    <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
-    <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
-    <a href="#" class="cta">Quero Alívio Agora!</a>
-  </section>
+  <main>
+    <!-- HERO / BANNER -->
+    <section class="hero">
+      <div class="hero-div">
+        <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
+        <p>Conheça o Método Integrado que Está Transformando a Saúde de Quem Mora em São Paulo!</p>
+        <button class="hero-button">
+          <a href="#" class="cta">Quero Alívio!</a>
+        </button>
+      </div>
+    </section>
+    <!-- TRATAMENTOS -->
+    <section class="tratamentos">
+      <h2>Tratamentos Avançados para Corpo e Mente em Equilíbrio</h2>
+      <p>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</p>
+      <ul>
+        <li><strong>Quiropraxia:</strong> Realinhamento vertebral para alívio rápido de dores crônicas</li>
+        <li><strong>Maca de Flexo-distração:</strong> Técnica segura para hérnias e compressões</li>
+        <li><strong>Ondas de Choque:</strong> Estimula a regeneração de tecidos lesionados</li>
+        <li><strong>Fotobiomodulação:</strong> Terapia com laser para redução de inflamações</li>
+        <li><strong>Ozonioterapia:</strong> Imunidade fortalecida e ação anti-inflamatória</li>
+        <li><strong>Ultrassom Terapêutico:</strong> Tratamento profundo para lesões musculares</li>
+        <li><strong>Termografia:</strong> Diagnóstico preciso sem radiação</li>
+        <li><strong>Pilates Clínico:</strong> Força, flexibilidade e reabilitação funcional</li>
+      </ul>
+      <div class="fotos-tratamentos">
+        <img src="./src/assets/tratamento1.jpg" alt="Tratamento 1" />
+        <img src="./src/assets/tratamento2.jpg" alt="Tratamento 2" />
+        <img src="./src/assets/tratamento3.jpg" alt="Tratamento 3" />
+      </div>
+      <a href="#" class="cta">Descubra Seu Tratamento!</a>
+    </section>
 
-  <!-- TRATAMENTOS -->
-  <section class="tratamentos">
-    <h2>Tratamentos Avançados para Corpo e Mente em Equilíbrio</h2>
-    <p>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</p>
-    <ul>
-      <li><strong>Quiropraxia:</strong> Realinhamento vertebral para alívio rápido de dores crônicas</li>
-      <li><strong>Maca de Flexo-distração:</strong> Técnica segura para hérnias e compressões</li>
-      <li><strong>Ondas de Choque:</strong> Estimula a regeneração de tecidos lesionados</li>
-      <li><strong>Fotobiomodulação:</strong> Terapia com laser para redução de inflamações</li>
-      <li><strong>Ozonioterapia:</strong> Imunidade fortalecida e ação anti-inflamatória</li>
-      <li><strong>Ultrassom Terapêutico:</strong> Tratamento profundo para lesões musculares</li>
-      <li><strong>Termografia:</strong> Diagnóstico preciso sem radiação</li>
-      <li><strong>Pilates Clínico:</strong> Força, flexibilidade e reabilitação funcional</li>
-    </ul>
-    <div class="fotos-tratamentos">
-      <img src="./src/assets/tratamento1.jpg" alt="Tratamento 1" />
-      <img src="./src/assets/tratamento2.jpg" alt="Tratamento 2" />
-      <img src="./src/assets/tratamento3.jpg" alt="Tratamento 3" />
-    </div>
-    <a href="#" class="cta">Descubra Seu Tratamento!</a>
-  </section>
+    <!-- DRA ALESSANDRA -->
+    <section class="especialidades">
+      <h2>Dra. Alessandra</h2>
+      <h3>Especialidades</h3>
+      <ul>
+        <li>Quiropraxia clínica</li>
+        <li>Quiropraxia diversificada de Janse</li>
+        <li>Quiropraxia método thompson</li>
+        <li>Quiropraxia instrumental (TIQ)</li>
+        <li>Terapia Crânio Sacral</li>
+        <li>Dry needling</li>
+        <li>Terapia de liberação muscular</li>
+        <li>Fotobiomodulação</li>
+        <li>Pilates clássico e Pilates Avançado</li>
+        <li>Pós-graduação em Dermatofuncional e Cosmetologia</li>
+      </ul>
+      <img src="./src/assets/dra-alessandra.jpg" alt="Foto da Dra. Alessandra" />
+    </section>
 
-  <!-- DRA ALESSANDRA -->
-  <section class="especialidades">
-    <h2>Dra. Alessandra</h2>
-    <h3>Especialidades</h3>
-    <ul>
-      <li>Quiropraxia clínica</li>
-      <li>Quiropraxia diversificada de Janse</li>
-      <li>Quiropraxia método thompson</li>
-      <li>Quiropraxia instrumental (TIQ)</li>
-      <li>Terapia Crânio Sacral</li>
-      <li>Dry needling</li>
-      <li>Terapia de liberação muscular</li>
-      <li>Fotobiomodulação</li>
-      <li>Pilates clássico e Pilates Avançado</li>
-      <li>Pós-graduação em Dermatofuncional e Cosmetologia</li>
-    </ul>
-    <img src="./src/assets/dra-alessandra.jpg" alt="Foto da Dra. Alessandra" />
-  </section>
+    <!-- SOBRE NÓS -->
+    <section class="sobre">
+      <h2>Sobre nós</h2>
+      <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor
+        crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar
+        do desafio inicial da pandemia, conseguimos crescer e melhorar nossas instalações, incorporando novas técnicas e
+        tecnologias para melhorar os resultados.</p>
+      <p>Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas
+        da coluna. Além disso, oferecemos tratamentos como Quiropraxia, Ozonioterapia, Ondas de Choque, Fisioterapia
+        Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.</p>
+      <p>Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos
+        e especializada no tratamento de coluna. O Pilates, uma das práticas mais recomendadas para quem sofre com dores
+        na coluna, é aplicado pelas instrutoras especializadas Marcia Pirrozelle e Geovana Souza. Assim, oferecemos um
+        atendimento integrado e de alta qualidade, adequado às necessidades de cada paciente.</p>
+      <img src="./src/assets/clinica-fachada.jpg" alt="Foto da fachada da clínica" />
+    </section>
 
-  <!-- SOBRE NÓS -->
-  <section class="sobre">
-    <h2>Sobre nós</h2>
-    <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar do desafio inicial da pandemia, conseguimos crescer e melhorar nossas instalações, incorporando novas técnicas e tecnologias para melhorar os resultados.</p>
-    <p>Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas da coluna. Além disso, oferecemos tratamentos como Quiropraxia, Ozonioterapia, Ondas de Choque, Fisioterapia Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.</p>
-    <p>Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos e especializada no tratamento de coluna. O Pilates, uma das práticas mais recomendadas para quem sofre com dores na coluna, é aplicado pelas instrutoras especializadas Marcia Pirrozelle e Geovana Souza. Assim, oferecemos um atendimento integrado e de alta qualidade, adequado às necessidades de cada paciente.</p>
-    <img src="./src/assets/clinica-fachada.jpg" alt="Foto da fachada da clínica" />
-  </section>
+    <!-- NOSSA ESTRUTURA -->
+    <section class="nossa-estrutura">
+      <h2>Nossa Estrutura</h2>
+      <p>Lorem ipsum dolor sit amet consectetur. Turpis amet donec velit aliquet nibh imperdiet cursus arcu.</p>
+      <a href="#" class="cta">Agende uma Avaliação Conosco</a>
+      <img src="./src/assets/nossa-estrutura.jpg" alt="Imagem da estrutura da clínica" />
+    </section>
 
-  <!-- NOSSA ESTRUTURA -->
-  <section class="nossa-estrutura">
-    <h2>Nossa Estrutura</h2>
-    <p>Lorem ipsum dolor sit amet consectetur. Turpis amet donec velit aliquet nibh imperdiet cursus arcu.</p>
-    <a href="#" class="cta">Agende uma Avaliação Conosco</a>
-    <img src="./src/assets/nossa-estrutura.jpg" alt="Imagem da estrutura da clínica" />
-  </section>
+    <!-- DEPOIMENTOS -->
+    <section class="depoimentos">
+      <h2>Depoimentos de Quem Voltou a Viver Sem Dor</h2>
+      <div class="avaliacoes">
+        <img src="./src/assets/review-google.png" alt="Avaliação Google" />
+        <blockquote>
+          <p><strong>Cecília Assaf:</strong> Excelente atendimento, ótimas profissionais</p>
+        </blockquote>
+        <blockquote>
+          <p><strong>Rossana Bonfig:</strong> Atendimento maravilhoso desde o acolhimento ao Pilates.</p>
+        </blockquote>
+      </div>
+      <a href="#" class="cta">Quero Me Sentir Melhor!</a>
+    </section>
 
-  <!-- DEPOIMENTOS -->
-  <section class="depoimentos">
-    <h2>Depoimentos de Quem Voltou a Viver Sem Dor</h2>
-    <div class="avaliacoes">
-      <img src="./src/assets/review-google.png" alt="Avaliação Google" />
-      <blockquote>
-        <p><strong>Cecília Assaf:</strong> Excelente atendimento, ótimas profissionais</p>
-      </blockquote>
-      <blockquote>
-        <p><strong>Rossana Bonfig:</strong> Atendimento maravilhoso desde o acolhimento ao Pilates.</p>
-      </blockquote>
-    </div>
-    <a href="#" class="cta">Quero Me Sentir Melhor!</a>
-  </section>
-
-  <!-- CONTATO -->
-  <section class="contato">
-    <h2>Contato</h2>
-    <div class="contato-wrapper">
-      <div class="info">
-        <p><strong>📞 DÚVIDAS E INFORMAÇÕES:</strong><br>
-          (11) 96357-1929<br>
-          oficialcolunasemdor@gmail.com
-        </p>
-        <p><strong>📍 ONDE ESTAMOS:</strong><br>
-          Rua São Benedito, 418 –<br>
-          Jardim Santo Amaro, São Paulo - SP
-        </p>
-        <p><strong>CONHEÇA E ACOMPANHE<br>A NOSSA REDES SOCIAIS:</strong></p>
-        <div class="social-icons">
-          <a href="#"><img src="./src/assets/instagram-icon.svg" alt="Instagram" /></a>
-          <a href="#"><img src="./src/assets/tiktok-icon.svg" alt="TikTok" /></a>
-          <a href="#"><img src="./src/assets/linkedin-icon.svg" alt="LinkedIn" /></a>
+    <!-- CONTATO -->
+    <section class="contato">
+      <h2>Contato</h2>
+      <div class="contato-wrapper">
+        <div class="info">
+          <p><strong>📞 DÚVIDAS E INFORMAÇÕES:</strong><br>
+            (11) 96357-1929<br>
+            oficialcolunasemdor@gmail.com
+          </p>
+          <p><strong>📍 ONDE ESTAMOS:</strong><br>
+            Rua São Benedito, 418 –<br>
+            Jardim Santo Amaro, São Paulo - SP
+          </p>
+          <p><strong>CONHEÇA E ACOMPANHE<br>A NOSSA REDES SOCIAIS:</strong></p>
+          <div class="social-icons">
+            <a href="#"><img src="./src/assets/instagram-icon.svg" alt="Instagram" /></a>
+            <a href="#"><img src="./src/assets/tiktok-icon.svg" alt="TikTok" /></a>
+            <a href="#"><img src="./src/assets/linkedin-icon.svg" alt="LinkedIn" /></a>
+          </div>
+        </div>
+        <div class="mapa">
+          <img src="./src/assets/mapa-google.png" alt="Mapa com localização" />
         </div>
       </div>
-      <div class="mapa">
-        <img src="./src/assets/mapa-google.png" alt="Mapa com localização" />
-      </div>
-    </div>
-  </section>
+    </section>
 
-</main>
+  </main>
 
   <!-- FOOTER -->
   <footer>
@@ -166,4 +179,5 @@
   </footer>
 
 </body>
+
 </html>
