Subindo o cod finalizado do dia</article>(sabado)

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./src/styles/footer.css" />
     <link rel="stylesheet" href="./src/styles/especialidades.css">
     <link rel="stylesheet" href="/src/styles/sobreNos.css">
+    <link rel="stylesheet" href="/src/styles/estrutura.css">
 
     <!-- ICONS -->
     <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
@@ -100,12 +101,12 @@
 
   <!-- SOBRE NÓS - Arthur -->
   <section class="sobre">
-    <span>
+    <article>
     <h2>Sobre nós</h2>
     <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor crônica, especialmente na coluna, um espaço especializado para tratamento de qualidade e personalizado. Apesar do desafio inicial da pandemia, conseguimos crescer e melhorar nossas instalações, incorporando novas técnicas e tecnologias para melhorar os resultados.</p>
     <p>Atualmente, contamos com a Maca de Flexodistração, que permite tração, mobilizações e manipulações realizadas da coluna. Além disso, oferecemos tratamentos como Quiropraxia, Ozonioterapia, Ondas de Choque, Fisioterapia Regenerativa Eco Guiada e Pilates, todas as apresentações para o transtorno e reabilitação da coluna.</p>
     <p>Nosso atendimento é conduzido pela fisioterapeuta e fundadora da clínica, Alessandra Souza, formada há 11 anos e especializada no tratamento de coluna. O Pilates, uma das práticas mais recomendadas para quem sofre com dores na coluna, é aplicado pelas instrutoras especializadas Marcia Pirrozelle e Geovana Souza. Assim, oferecemos um atendimento integrado e de alta qualidade, adequado às necessidades de cada paciente.</p>
-    </span>
+    </article>
     <img src="./src/assets/image 2 (1).png" alt="Foto da fachada da clínica" />
   </section>
 
