feat: tratamentos section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./src/styles/header.css" />
   <link rel="stylesheet" href="./src/styles/main.css" />
   <link rel="stylesheet" href="./src/styles/footer.css" />
+  <link rel="stylesheet" href="./src/styles/tratamentos.css" />
   <!-- <link rel="stylesheet" href="./src/styles/nav.css" /> -->
 
   <!-- ICONS -->
@@ -60,24 +61,32 @@
     </section>
     <!-- TRATAMENTOS -->
     <section class="tratamentos">
-      <h2>Tratamentos Avançados para Corpo e Mente em Equilíbrio</h2>
-      <p>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</p>
-      <ul>
-        <li><strong>Quiropraxia:</strong> Realinhamento vertebral para alívio rápido de dores crônicas</li>
-        <li><strong>Maca de Flexo-distração:</strong> Técnica segura para hérnias e compressões</li>
-        <li><strong>Ondas de Choque:</strong> Estimula a regeneração de tecidos lesionados</li>
-        <li><strong>Fotobiomodulação:</strong> Terapia com laser para redução de inflamações</li>
-        <li><strong>Ozonioterapia:</strong> Imunidade fortalecida e ação anti-inflamatória</li>
-        <li><strong>Ultrassom Terapêutico:</strong> Tratamento profundo para lesões musculares</li>
-        <li><strong>Termografia:</strong> Diagnóstico preciso sem radiação</li>
-        <li><strong>Pilates Clínico:</strong> Força, flexibilidade e reabilitação funcional</li>
-      </ul>
-      <div class="fotos-tratamentos">
-        <img src="./src/assets/tratamento1.jpg" alt="Tratamento 1" />
-        <img src="./src/assets/tratamento2.jpg" alt="Tratamento 2" />
-        <img src="./src/assets/tratamento3.jpg" alt="Tratamento 3" />
-      </div>
-      <a href="#" class="cta">Descubra Seu Tratamento!</a>
+      <aside class="tratamentos-aside-textos">
+        <h2>Tratamentos Avançados para Corpo e Mente em Equilíbrio</h2>
+        <p>Combinação de terapias que aceleram sua recuperação e melhoram sua qualidade de vida</p>
+        <ul class="tratamentos-list">
+          <li><strong>Quiropraxia:</strong> Realinhamento vertebral para alívio rápido de dores crônicas</li>
+          <li><strong>Maca de Flexo-distração:</strong> Técnica segura para hérnias e compressões</li>
+          <li><strong>Ondas de Choque:</strong> Estimula a regeneração de tecidos lesionados</li>
+          <li><strong>Fotobiomodulação:</strong> Terapia com laser para redução de inflamações</li>
+          <li><strong>Ozonioterapia:</strong> Imunidade fortalecida e ação anti-inflamatória</li>
+          <li><strong>Ultrassom Terapêutico:</strong> Tratamento profundo para lesões musculares</li>
+          <li><strong>Termografia:</strong> Diagnóstico preciso sem radiação</li>
+          <li><strong>Pilates Clínico:</strong> Força, flexibilidade e reabilitação funcional</li>
+        </ul>
+        <button class="tratamentos-button">
+          <a href="#" class="ctb">Descubra Seu Tratamento!</a>
+        </button>
+      </aside>
+      <aside class="tratamentos-aside-fotos">
+        <div class="tratamentos-foto-1">
+          <img src="./src/assets/serv-1.jpeg" alt="Tratamento 1" />
+          <img src="./src/assets/serv-2.jpeg" alt="Tratamento 2" />
+        </div>
+        <div class="tratamentos-foto-2">
+          <img src="./src/assets/serv-3.jpeg" alt="Tratamento 3" />
+        </div>
+      </aside>
     </section>
 
     <!-- DRA ALESSANDRA -->
