feat: galeria as finished and Nossa Estrutura was removed

--- a/index.html
+++ b/index.html
@@ -146,46 +146,64 @@
       </aside>
  <!-- Carousel adaptado -->
  <section class="carousel" aria-label="Galeria de Imagens">
-    <ol class="carousel__viewport">
-      <li id="carousel__slide1" class="carousel__slide">
-        <img src="./src/assets/serv-1.jpeg" alt="Tratamento 1">
-      </li>
-      <li id="carousel__slide2" class="carousel__slide">
-        <img src="./src/assets/serv-2.jpeg" alt="Tratamento 2">
-      </li>
-      <li id="carousel__slide3" class="carousel__slide">
-        <img src="./src/assets/serv-3.jpeg" alt="Tratamento 3">
-      </li>
-    </ol>
+  <ol class="carousel__viewport">
+    <li id="carousel__slide1" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-01.jpeg" alt="Tratamento 1">
+      <a href="#carousel__slide6" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide2" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>
+    <li id="carousel__slide2" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-02.jpeg" alt="Tratamento 2">
+      <a href="#carousel__slide1" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide3" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>
+    <li id="carousel__slide3" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-03.jpeg" alt="Tratamento 3">
+      <a href="#carousel__slide2" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide4" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>
+    <li id="carousel__slide4" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-04.jpeg" alt="Tratamento 4">
+      <a href="#carousel__slide3" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide5" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>
+    <li id="carousel__slide5" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-05.jpeg" alt="Tratamento 5">
+      <a href="#carousel__slide4" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide6" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>
+    <li id="carousel__slide6" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-06.jpeg" alt="Tratamento 6">
+      <a href="#carousel__slide5" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide7" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>
+    <li id="carousel__slide7" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-07.jpeg" alt="Tratamento 6">
+      <a href="#carousel__slide6" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide8" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>    
+    <li id="carousel__slide8" class="carousel__slide">
+      <img src="./src/assets/galeria/ga-08.jpeg" alt="Tratamento 6">
+      <a href="#carousel__slide7" class="carousel__prev"><i class="fa-solid fa-arrow-left"></i></a>
+      <a href="#carousel__slide1" class="carousel__next"><i class="fa-solid fa-arrow-right"></i></a>
+    </li>    
+  </ol>
 
-    <!-- SETAS FIXAS -->
-    <div class="carousel__controls">
-      <a href="#carousel__slide3" class="carousel__prev" aria-label="Anterior">
-        <i class="fa-solid fa-arrow-left"></i>
-      </a>
-      <a href="#carousel__slide2" class="carousel__next" aria-label="Próximo">
-        <i class="fa-solid fa-arrow-right"></i>
-      </a>
-    </div>
-
-    <!-- NAVEGAÇÃO -->
-    <aside class="carousel__navigation">
-      <a href="#carousel__slide1">•</a>
-      <a href="#carousel__slide2">•</a>
-      <a href="#carousel__slide3">•</a>
-    </aside>
-  </section>
+  <!-- Bolinhas de navegação -->
+  <aside class="carousel__navigation">
+    <a href="#carousel__slide1">•</a>
+    <a href="#carousel__slide2">•</a>
+    <a href="#carousel__slide3">•</a>
+    <a href="#carousel__slide4">•</a>
+    <a href="#carousel__slide5">•</a>
+    <a href="#carousel__slide6">•</a>
+    <a href="#carousel__slide7">•</a>
+    <a href="#carousel__slide8">•</a>
+  </aside>
+</section>
     </section>
 
-    <!-- NOSSA ESTRUTURA -->
-    <section class="nossa-estrutura">
-      <h2>Nossa Estrutura</h2>
-      <p>Lorem ipsum dolor sit amet consectetur. Turpis amet donec velit aliquet nibh imperdiet cursus arcu.</p>
-      <a href="#" class="cta">Agende uma Avaliação Conosco</a>
-      <img src="./src/assets/nossa-estrutura.jpg" alt="Imagem da estrutura da clínica" />
-    </section>
-
-    <!-- DEPOIMENTOS -->
+   <!-- DEPOIMENTOS -->
     <section class="depoimentos">
       <h2>Depoimentos de Quem Voltou a Viver Sem Dor</h2>
       <div class="avaliacoes">
