--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <link rel="stylesheet" href="./src/styles/carousel.css" />
   <link rel="stylesheet" href="/src/styles/especialidades.css">
   <link rel="stylesheet" href="/src/styles/sobreNos.css">
+  <link rel="stylesheet" href="/src/styles/depoimentos.css">
 
   <!-- ICONS -->
   <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
@@ -271,10 +272,10 @@ workspace_premium
   <!-- FOOTER -->
   <footer>
     <div class="footer-wrapper">
-      <img src="./src/assets/logo-footer.png" alt="Logo Coluna Sem Dor" class="footer-logo" />
+      <img src="./src/assets/logo.png" alt="Logo Coluna Sem Dor" class="footer-logo" />
       <p>© Coluna sem dor, 2025 Todos os direitos reservados</p>
       <a href="https://wa.me/5511963571929" target="_blank">
-        <img src="./src/assets/whatsapp-icon.svg" alt="WhatsApp" class="whatsapp-icon" />
+        <img src="./src/assets/icon-whatsapp.svg" alt="WhatsApp" class="whatsapp-icon" />
       </a>
     </div>
   </footer>
