--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="./src/styles/carousel.css" />
   <link rel="stylesheet" href="/src/styles/especialidades.css">
   <link rel="stylesheet" href="/src/styles/sobreNos.css">
-  <link rel="stylesheet" href="/src/styles/depoimentos.css">
+  <link rel="stylesheet" href="/src/styles/contato.css">
 
   <!-- ICONS -->
   <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
@@ -243,11 +243,11 @@ workspace_premium
 
     <!-- CONTATO -->
     <section class="contato">
-      <h2>Contato</h2>
       <div class="contato-wrapper">
         <div class="info">
-          <p><strong>📞 DÚVIDAS E INFORMAÇÕES:</strong><br>
-            (11) 96357-1929<br>
+          <h2>Contato</h2>
+          <h3><strong>📞 DÚVIDAS E INFORMAÇÕES:</strong><br></h3>
+            <p>(11) 96357-1929<br>
             oficialcolunasemdor@gmail.com
           </p>
           <p><strong>📍 ONDE ESTAMOS:</strong><br>
@@ -256,13 +256,13 @@ workspace_premium
           </p>
           <p><strong>CONHEÇA E ACOMPANHE<br>A NOSSA REDES SOCIAIS:</strong></p>
           <div class="social-icons">
-            <a href="#"><img src="./src/assets/instagram-icon.svg" alt="Instagram" /></a>
-            <a href="#"><img src="./src/assets/tiktok-icon.svg" alt="TikTok" /></a>
-            <a href="#"><img src="./src/assets/linkedin-icon.svg" alt="LinkedIn" /></a>
+            <a href="#"><img src="./src/assets/Frame/insta.png" alt="Instagram" /></a>
+            <a href="#"><img src="./src/assets/Frame/link.png" alt="TikTok" /></a>
+            <a href="#"><img src="./src/assets/Frame/tiktok.png" alt="LinkedIn" /></a>
           </div>
         </div>
         <div class="mapa">
-          <img src="./src/assets/mapa-google.png" alt="Mapa com localização" />
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3654.744781603318!2d-46.70441042462363!3d-23.64930937873949!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce516b4bb5ee23%3A0x602b54d54441b2c7!2sColuna%20Sem%20Dor%20-%20Clinica%20de%20Quiropraxia%20e%20Fisioterapia!5e0!3m2!1spt-BR!2sbr!4v1747849922859!5m2!1spt-BR!2sbr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>" 
         </div>
       </div>
     </section>
