--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ workspace_premium
     </section>
 
    <!-- DEPOIMENTOS -->
-    <section class="depoimentos">
+    <!-- <section class="depoimentos">
       <h2>Depoimentos de Quem Voltou a Viver Sem Dor</h2>
       <div class="avaliacoes">
         <img src="./src/assets/review-google.png" alt="Avaliação Google" />
@@ -239,7 +239,10 @@ workspace_premium
         </blockquote>
       </div>
       <a href="#" class="cta">Quero Me Sentir Melhor!</a>
-    </section>
+    </section> -->
+    <!-- Elfsight Google Reviews | Untitled Google Reviews -->
+<script src="https://static.elfsight.com/platform/platform.js" async></script>
+<div class="elfsight-app-63ea8195-80f3-4a99-8d82-edc05e4cf097" data-elfsight-app-lazy></div>
 
     <!-- CONTATO -->
     <section class="contato">
