--- a/index.html
+++ b/index.html
@@ -7,12 +7,17 @@
   <title>Coluna Sem Dor</title>
 
   <!-- CSS -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="./src/styles/reset.css" />
-  <link rel="stylesheet" href="./src/styles/header.css" />
+  <!-- <link rel="stylesheet" href="./src/styles/header.css" />
   <link rel="stylesheet" href="./src/styles/main.css" />
   <link rel="stylesheet" href="./src/styles/footer.css" />
   <link rel="stylesheet" href="./src/styles/tratamentos.css" />
-  <!-- <link rel="stylesheet" href="./src/styles/nav.css" /> -->
+  <link rel="stylesheet" href="./src/styles/nav.css" /> -->
 
   <!-- ICONS -->
   <script src="https://kit.fontawesome.com/7b1b9f29c7.js" crossorigin="anonymous"></script>
@@ -20,8 +25,22 @@
 </head>
 
 <body>
+  <header>
+    <img src="./src/images/logo.png" alt="Logo da clinica 'Coluna sem dor'">
+    <nav>
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
+      <a href=""></a>
+    </nav>
+    <button><img src="./src/images/icon-instagram.svg" alt=""></button>
+    <button><img src="./src/images/icon-tiktok.svg" alt=""></button>
+    <button><img src="./src/images/icon-whatsapp.svg" alt=""></button>
+  </header>
+</body>
+<!-- <body> 
 
-  <!-- HEADER -->
+   HEADER 
   <header>
     <div class="container">
       <img src="./src/assets/logo.png" alt="Logo Coluna Sem Dor" class="logo" />
@@ -49,7 +68,7 @@
     </div>
   </header>
   <main>
-    <!-- HERO / BANNER -->
+    HERO / BANNER 
     <section class="hero">
       <div class="hero-div">
         <h1>Você Sofre com Dores Nas Costas, Estresse ou Lesões?</h1>
@@ -59,7 +78,7 @@
         </button>
       </div>
     </section>
-    <!-- TRATAMENTOS -->
+     TRATAMENTOS 
     <section class="tratamentos">
       <aside class="tratamentos-aside-textos">
         <h2>Tratamentos Avançados para Corpo e Mente em Equilíbrio</h2>
@@ -89,7 +108,7 @@
       </aside>
     </section>
 
-    <!-- DRA ALESSANDRA -->
+     DRA ALESSANDRA 
     <section class="especialidades">
       <h2>Dra. Alessandra</h2>
       <h3>Especialidades</h3>
@@ -108,7 +127,7 @@
       <img src="./src/assets/dra-alessandra.jpg" alt="Foto da Dra. Alessandra" />
     </section>
 
-    <!-- SOBRE NÓS -->
+     SOBRE NÓS 
     <section class="sobre">
       <h2>Sobre nós</h2>
       <p>A Clínica Coluna Sem Dor foi inaugurada em janeiro de 2020, com o objetivo de oferecer aos pacientes com dor
@@ -125,7 +144,7 @@
       <img src="./src/assets/clinica-fachada.jpg" alt="Foto da fachada da clínica" />
     </section>
 
-    <!-- NOSSA ESTRUTURA -->
+     NOSSA ESTRUTURA 
     <section class="nossa-estrutura">
       <h2>Nossa Estrutura</h2>
       <p>Lorem ipsum dolor sit amet consectetur. Turpis amet donec velit aliquet nibh imperdiet cursus arcu.</p>
@@ -133,7 +152,7 @@
       <img src="./src/assets/nossa-estrutura.jpg" alt="Imagem da estrutura da clínica" />
     </section>
 
-    <!-- DEPOIMENTOS -->
+     DEPOIMENTOS 
     <section class="depoimentos">
       <h2>Depoimentos de Quem Voltou a Viver Sem Dor</h2>
       <div class="avaliacoes">
@@ -148,7 +167,7 @@
       <a href="#" class="cta">Quero Me Sentir Melhor!</a>
     </section>
 
-    <!-- CONTATO -->
+     CONTATO 
     <section class="contato">
       <h2>Contato</h2>
       <div class="contato-wrapper">
@@ -176,7 +195,7 @@
 
   </main>
 
-  <!-- FOOTER -->
+  FOOTER 
   <footer>
     <div class="footer-wrapper">
       <img src="./src/assets/logo-footer.png" alt="Logo Coluna Sem Dor" class="footer-logo" />
@@ -187,6 +206,6 @@
     </div>
   </footer>
 
-</body>
+ </body> -->
 
 </html>
